# tsxai

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: streamlit_app.py
data/raw/: .gitkeep
explainers/: __init__.py  base_explainer.py  hybrid_explainer.py  temporal_lime.py  temporal_shap.py
models/: __init__.py  base_model.py  lstm_model.py  prophet_model.py  xgboost_model.py
results/precomputed/: .gitkeep
scripts/: generate_demo_data.py  test_installation.py
tests/: __init__.py  conftest.py  test_explainers.py  test_feature_engineering.py  test_metrics.py  test_models.py
utils/: __init__.py  data_loader.py  feature_engineering.py  metrics.py  visualization.py
